# splunk-detection-lab

./: README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: analyst-playbook.md  employer-review.md  roadmap.md
docs/examples/: example_detection_report.md
sample_data/: auth_events.json
spl/: bruteforce_login.spl  password_spray.spl  privileged_unusual_source.spl
src/splunk_detection_lab/: __init__.py  detector.py
tests/: test_detector.py
