[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "splunk-detection-lab"
version = "1.0.0"
description = "Defensive Splunk detection lab with sample logs, SPL, and tests."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
